# InvestmentTrading

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
app/: main.py  models.py  streamlit_app.py
app/services/: calculations.py  display.py  level_type_weights.json  market_data.py  news.py  pdf_report.py  providers.py  scanner.py  score_history.py
app/static/: app.js  index.html  styles.css
app/streamlit_ui/: __init__.py  metrics.py
data/: .gitignore
debug/: README.md  bug-registry.md  bug-template.md
debug/benchmarks/: streamlit-speed-comparison-2026-06-16-lazy-earnings-warm-cache.json  streamlit-speed-comparison-2026-06-16-lazy-earnings-warm-cache.md  streamlit-speed-comparison-2026-06-16-lazy-earnings.json  streamlit-speed-comparison-2026-06-16-lazy-earnings.md  streamlit-speed-comparison-2026-06-16.json  streamlit-speed-comparison-2026-06-16.md
debug/bugs/: BUG-0001-streamlit-news-expand-grey-screen.md  BUG-0002-unsafe-news-url-schemes.md  BUG-0003-loose-ticker-validation-and-provider-log-clutter.md  BUG-0004-static-stale-superseded-request-rendering.md  BUG-0005-streamlit-report-search-chart-refetches.md  BUG-0006-streamlit-partial-refresh-marks-unrelated-data-current.md  BUG-0007-static-raw-json-validation-messages.md  BUG-0008-missing-static-report-ticker-search.md  (+5 more)
scripts/: benchmark_streamlit_speed.py  compare_adam_scanner.py
tests/: test_display.py  test_market_data.py  test_models.py  test_news.py  test_project_metadata.py  test_scanner.py  test_score_history.py  test_static_ui.py  test_streamlit_app.py
(+5 files in other folders)
