[project]
name = "investment-trading"
version = "0.1.0"
description = "FastAPI and Streamlit web UIs for calculating daily equity price levels of significance."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pandas>=2.2.0",
    "yfinance>=0.2.40",
    "lxml>=5.2.0",
    "reportlab>=4.2.0",
    "pydantic>=2.7.0",
    "streamlit>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
